Fix the title wrapping / length on overlays

--- a/src/components/overlay/index.css
+++ b/src/components/overlay/index.css
@@ -157,7 +157,8 @@
     background-size: cover;
 
     &.is-second {
-      background: url("../img/background-overlay-02b.jpg") no-repeat top center;
+      background: url("../img/background-overlay-02b.jpg") no-repeat -20px 0;
+      background-size: 130%;
     }
   }
 }
@@ -209,7 +210,8 @@
     display: block;
     font: 700 40px/30px var(--sans);
     margin: 60px 0 0;
-    max-width: 480px;
+    max-width: 640px;
+    min-width: 800px;
     text-align: left;
 
     &::after {
@@ -285,6 +287,11 @@
     & .Overlay-inner {
       background-size: 110%;
     }
+
+    & .Overlay-title {
+      max-width: 540px;
+      min-width: 500px;
+    }
   }
 
   .Overlay--03 {
@@ -292,6 +299,11 @@
       background-image: url("../img/background-overlay-03-large.png");
       background-position: center;
       background-size: cover;
+    }
+
+    & .Overlay-title {
+      max-width: 640px;
+      min-width: 500px;
     }
 
     & .Overlay-list {
